dark mode fix + btn 6

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -59,7 +59,7 @@
 
     --color-toggle-btn: #ffffff;
 
-    --color-bg-bar: #b5b5b5;
+    --color-bg-bar: #818181;
 
   }
 
